objects/SBQQ__ProductRule__c.object
<CustomObject>
    <customHelpPage>SBQQ__ProductRuleHelp</customHelpPage>
    <description>Rule that governs valid product configurations.</description>
    <fields>
        <fullName>SBQQ__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether this rule is active or inactive.</description>
        <inlineHelpText>Indicates whether this rule is active or inactive.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__AdvancedCondition__c</fullName>
        <description>Can only be entered if the Conditions Met is Custom. Enter a combination of the Error Condition Index #s, AND, OR, and parenthesis (e.g. (123 AND 124) AND 125).</description>
        <inlineHelpText>Can only be entered if the Conditions Met is Custom. Enter a combination of the Error Condition Index #s, AND, OR, and parenthesis (e.g. (123 AND 124) AND 125).</inlineHelpText>
        <label>Advanced Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConditionsMet__c</fullName>
        <description>Choose the behavior for your conditions: All is AND, Any is OR, Custom is a combination of AND/OR.</description>
        <inlineHelpText>Choose the behavior for your conditions: All is AND, Any is OR, Custom is a combination of AND/OR.</inlineHelpText>
        <label>Conditions Met</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ErrorMessage__c</fullName>
        <description>Enter a message to displayed when rule is activated.  An error message will be displayed when a Validations is fired.  A warning message will be displayed when an Alert is fired. Does not apply to Filter rules.</description>
        <inlineHelpText>Enter a message to displayed when rule is activated.  An error message will be displayed when a Validations is fired.  A warning message will be displayed when an Alert is fired. Does not apply to Filter rules.</inlineHelpText>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__EvaluationEvent__c</fullName>
        <description>Event that causes this rule to be evaluated.</description>
        <inlineHelpText>Specify when this rule should be evaluated.</inlineHelpText>
        <label>Evaluation Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Load</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
                <value>
                    <fullName>Save</fullName>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__EvaluationOrder__c</fullName>
        <description>Order in which this price rule is evaluated.</description>
        <inlineHelpText>Help Text   Specify the order of evaluation for this price rule. Higher ordered rules are evaluated last which means they &quot;win&quot; in case of conflict.</inlineHelpText>
        <label>Evaluation Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__LookupMessageField__c</fullName>
        <description>Field on Lookup Object corresponding to Product Rule Message. Field must be text.</description>
        <inlineHelpText>Field on Lookup Object corresponding to Product Rule Message. Field must be text.</inlineHelpText>
        <label>Lookup Message Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SBQQ__Message__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__LookupObject__c</fullName>
        <description>API Name of the Custom Object that stores the lookup data.</description>
        <inlineHelpText>API Name of the Custom Object that stores the lookup data.</inlineHelpText>
        <label>Lookup Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SBQQ__LookupData__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__LookupProductField__c</fullName>
        <description>Field on Lookup Object corresponding to Product Action Product Lookup. Field must be a lookup to the Product object.</description>
        <inlineHelpText>Field on Lookup Object corresponding to Product Action Product Lookup. Field must be a lookup to the Product object.</inlineHelpText>
        <label>Lookup Product Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SBQQ__Product__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__LookupRequiredField__c</fullName>
        <description>Field on Lookup Object corresponding to Product Action Required checkbox. Field must be checkbox.</description>
        <inlineHelpText>Field on Lookup Object corresponding to Product Action Required checkbox. Field must be checkbox.</inlineHelpText>
        <label>Lookup Required Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SBQQ__Required__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__LookupTypeField__c</fullName>
        <description>Field on Lookup Object corresponding to Product Action Type picklist. Field must be a Picklist or Text.</description>
        <inlineHelpText>Field on Lookup Object corresponding to Product Action Type picklist. Field must be a Picklist or Text.</inlineHelpText>
        <label>Lookup Type Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SBQQ__Type__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Scope__c</fullName>
        <description>Scopes the rule to the entire quote or specific product.</description>
        <inlineHelpText>Applies the rule to the entire quote or specific product.</inlineHelpText>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                    <default>true</default>
                    <label>Quote</label>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Type__c</fullName>
        <description>Type of rule. Validation displays error messages. Selection causes products to be added or suggested. Alert displays a warning, but requires no rectification. Filter refines option lookup results for Dynamic Bundles.</description>
        <inlineHelpText>Type of rule. Validation displays error messages. Selection causes products to be added or suggested. Alert displays a warning, but requires no rectification. Filter refines option lookup results for Dynamic Bundles.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Validation</fullName>
                </value>
                <value>
                    <fullName>Selection</fullName>
                </value>
                <value>
                    <fullName>Alert</fullName>
                </value>
                <value>
                    <fullName>Filter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Rule</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SBQQ__FilterTypeScope</fullName>
        <active>true</active>
        <description>Validation for Filter type Product Rules not having a value of &apos;Product&apos; in the Scope field.</description>
        <errorConditionFormula>AND( 
ISPICKVAL(SBQQ__Type__c, &quot;Filter&quot;),
NOT(ISPICKVAL(SBQQ__Scope__c, &quot;Product&quot;))
)</errorConditionFormula>
        <errorMessage>The Scope field must point to &apos;Product&apos; for Filter type Product Rules.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__ProductEvaluationEventValidation</fullName>
        <active>true</active>
        <description>Validation for Scope Quote having an Evaluation Event of &apos;Edit&apos; and &apos;Load&apos;</description>
        <errorConditionFormula>OR(AND(ISPICKVAL(SBQQ__EvaluationEvent__c, &quot;Edit&quot;), ISPICKVAL(SBQQ__Scope__c, &quot;Quote&quot;)), AND(ISPICKVAL(SBQQ__EvaluationEvent__c, &quot;Load&quot;), ISPICKVAL(SBQQ__Scope__c, &quot;Quote&quot;)))</errorConditionFormula>
        <errorMessage>Only rules with Scope &apos;Product&apos; can have Evaluation Events of type &apos;Edit&apos; or &apos;Load&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__RequiredEvaluationEvent</fullName>
        <active>true</active>
        <description>Validation for required evaluation events if scope is filled in.</description>
        <errorConditionFormula>AND(
            ISBLANK(TEXT(SBQQ__EvaluationEvent__c)),
            OR(ISPICKVAL(SBQQ__Scope__c, &quot;Quote&quot;), ISPICKVAL(SBQQ__Scope__c, &quot;Product&quot;))
            )</errorConditionFormula>
        <errorMessage>The Evaluation Event field must be populated with a value.</errorMessage>
    </validationRules>
</CustomObject>